[package]
name = "libflycapture2-sys"
description = "bindings to the FlyCapture library"
version = "0.1.1"
authors = ["Andrew Straw <strawman@astraw.com>"]
build = "build.rs"
license = "MIT/Apache-2.0"
homepage = "https://github.com/astraw/libflycapture2-sys"
repository = "https://github.com/astraw/libflycapture2-sys"
links = "flycapture-c"

[dependencies]
